// Common protobufs for GitHub.

syntax = "proto2";
package github;

// A GitHub user's credentials and API token, used for authenticating API calls.
message GitHubCredentials {
  optional string username = 1;
  optional string password = 2;
}
